token validation jwt and delete refresh token
