# server/_helpers/db.js
@@ -6,7 +6,6 @@ mongoose.Promise = global.Promise;
 
 module.exports = {
     Account: require('../accounts/account.model'),
-    RefreshToken: require('../accounts/refresh-token.model'),
     isValidId
 };
 
